Set DJANGO_SECRET_KEY

--- a/deploy_files/systemd/emperor.uwsgi.service
+++ b/deploy_files/systemd/emperor.uwsgi.service
@@ -11,6 +11,8 @@ KillSignal=SIGQUIT
 Type=notify
 StandardError=syslog
 NotifyAccess=all
+User=www-data
+Group=www-data
 
 [Install]
 WantedBy=multi-user.target
